--- a/images-for-fb-cover.html
+++ b/images-for-fb-cover.html
@@ -20,13 +20,7 @@
   <header class="header">
     <div class="container">
       <div class="brand">
-        <div class="logo">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-            <rect x="3" y="4" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.5"/>
-            <path d="M8 13l3-3 5 5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            <circle cx="8" cy="9" r="1.5" fill="currentColor"/>
-          </svg>
-        </div>
+        <div class="logo"><img src="/logo.png" alt="CusImage"></div>
         <h1 class="title">CusImage</h1>
         <p class="subtitle">Images for FB Cover Gallery</p>
       </div>
