--- a/layout-demo.html
+++ b/layout-demo.html
@@ -21,7 +21,7 @@
         <header class="header">
             <div class="container">
                 <div class="brand">
-                    <div class="logo">🎨</div>
+                    <div class="logo"><img src="/logo.png" alt="CusImage"></div>
                     <h1 class="title">Layout Demo</h1>
                     <p class="subtitle">Modern layout showcase</p>
                 </div>
