--- a/blank-image.html
+++ b/blank-image.html
@@ -12,11 +12,11 @@
   <meta property="og:description" content="Create printable blank pages with custom grids, lines, templates, paper presets, DPI and export to PNG/JPG/SVG.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.cusimage.com/blank-image">
-  <meta property="og:image" content="https://www.cusimage.com/favicon.svg">
+  <meta property="og:image" content="https://www.cusimage.com/logo.png">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Blank Image Generator – Printable Grid, Lined & Staff Paper">
   <meta name="twitter:description" content="Generate printable blank pages with grids, lines and templates. Export PNG/JPG/SVG.">
-  <meta name="twitter:image" content="https://www.cusimage.com/favicon.svg">
+  <meta name="twitter:image" content="https://www.cusimage.com/logo.png">
   <title>Blank Image Generator | CusImage</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
@@ -94,13 +94,7 @@
   <header class="header">
     <div class="container">
       <div class="brand">
-        <div class="logo">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-            <rect x="3" y="4" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.5"/>
-            <path d="M8 13l3-3 5 5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            <circle cx="8" cy="9" r="1.5" fill="currentColor"/>
-          </svg>
-        </div>
+        <div class="logo"><img src="/logo.png" alt="CusImage"></div>
         <h1 class="title">CusImage</h1>
         <p class="subtitle">Printable Blank Pages with Grids & Lines</p>
       </div>
