--- a/image-describer.html
+++ b/image-describer.html
@@ -105,42 +105,51 @@
             <section class="tool-header">
                 <h2 class="tool-title">AI-Powered Image Describer & Alt Text Generator</h2>
                 <p class="tool-description">Upload an image, generate natural language descriptions, and copy the result for accessibility and SEO</p>
-                <div class="settings-actions" style="margin-top: var(--space-3);">
-                    <label for="promptStyleSelect" style="font-size:0.9rem;color:var(--gray-700);">Prompt Style</label>
-                    <select id="promptStyleSelect" style="height:40px;padding:0 var(--space-3);border:1px solid var(--gray-300);border-radius:var(--radius-md);">
-                        <option value="Brief">Brief</option>
-                        <option value="In detail">In detail</option>
-                        <option value="Vivid">Vivid</option>
-                        <option value="Abstractly">Abstractly</option>
-                    </select>
-                </div>
+                
             </section>
 
             <div class="cutout-workspace">
                 <div class="results-section" id="resultsSection" style="display: none;">
-                    <div class="results-header">
-                        <h3 class="results-title">AI Description</h3>
-                        <div class="results-actions">
-                            <button class="btn btn-secondary" id="resetBtn">Reupload</button>
-                            <button class="btn btn-secondary" id="copyBtn" style="display: none;">Copy</button>
-                            <button class="btn btn-primary" id="generateBtn">Generate</button>
-                        </div>
-                    </div>
-
-                    <div class="cutout-results-grid" id="describerResults">
-                        <div class="result-image-card">
-                            <h4 class="result-label">Original Image</h4>
-                            <div class="image-preview-container">
-                                <img id="originalImagePreview" class="result-image" alt="Original Image" loading="lazy">
+                    <div class="results-layout">
+                        <div class="content-pane">
+                            <div class="results-header">
+                                <h3 class="results-title">AI Description</h3>
+                                <div class="results-actions">
+                                    <button class="btn btn-secondary" id="resetBtn">Reupload</button>
+                                    <button class="btn btn-secondary" id="copyBtn" style="display: none;">Copy</button>
+                                </div>
+                            </div>
+                            <div class="cutout-results-grid" id="describerResults">
+                                <div class="result-image-card">
+                                    <h4 class="result-label">Original Image</h4>
+                                    <div class="image-preview-container">
+                                        <img id="originalImagePreview" class="result-image" alt="Original Image" loading="lazy">
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="result-image-card">
-                            <h4 class="result-label">AI Description</h4>
-                            <div class="image-preview-container">
-                                <div id="descriptionText" class="describer-description">Ready for AI description</div>
-                                <div id="descriptionLoading" class="loading-overlay" style="display: none;">
-                                    <div class="loading-spinner"></div>
-                                    <p>Processing description...</p>
+                        <div class="content-pane">
+                            <div class="panel-card">
+                                <div class="settings-actions" style="margin-bottom: var(--space-4);">
+                                    <label for="promptStyleSelect" style="font-size:0.9rem;color:var(--gray-700);">Prompt Style</label>
+                                    <select id="promptStyleSelect" style="height:40px;padding:0 var(--space-3);border:1px solid var(--gray-300);border-radius:var(--radius-md);width:100%;">
+                                        <option value="Brief">Brief</option>
+                                        <option value="In detail">In detail</option>
+                                        <option value="Vivid">Vivid</option>
+                                        <option value="Abstractly">Abstractly</option>
+                                    </select>
+                                </div>
+                                <div class="prompts-box" style="margin-bottom: var(--space-4); position: relative;">
+                                    <label style="font-size:0.9rem;color:var(--gray-700);">Generated prompts</label>
+                                    <textarea id="promptOutput" style="width:100%;height:180px;padding:var(--space-3);border:1px solid var(--gray-300);border-radius:var(--radius-md);" placeholder="Prompts will be shown here..."></textarea>
+                                    <div id="panelLoading" class="loading-overlay" style="display: none; position: absolute; inset: 0; justify-content: center; align-items: center;">
+                                        <div class="loading-spinner"></div>
+                                        <p>Generating...</p>
+                                    </div>
+                                </div>
+                                <div class="panel-actions" style="display:flex;flex-direction:column;gap:var(--space-3);">
+                                    <button class="btn btn-primary" id="generateBtn">Generate Prompts</button>
+                                    <button class="btn btn-secondary" id="clearBtn">Clear All</button>
                                 </div>
                             </div>
                         </div>
@@ -236,13 +245,15 @@
         var uploadArea = document.getElementById('uploadArea');
         var resultsSection = document.getElementById('resultsSection');
         var originalImagePreview = document.getElementById('originalImagePreview');
-        var descriptionText = document.getElementById('descriptionText');
-        var descriptionLoading = document.getElementById('descriptionLoading');
+        var descriptionText = null;
+        var descriptionLoading = null;
         var copyBtn = document.getElementById('copyBtn');
         var generateBtn = document.getElementById('generateBtn');
+        var clearBtn = document.getElementById('clearBtn');
         var resetBtn = document.getElementById('resetBtn');
         var canvas = document.getElementById('canvas');
         var promptStyleSelect = document.getElementById('promptStyleSelect');
+        var promptOutput = document.getElementById('promptOutput');
 
         var selectedFile = null;
         var originalImageUrl = null;
@@ -259,9 +270,10 @@
             if (originalImagePreview) originalImagePreview.src = originalImageUrl;
             detachUploadSection();
             showResults(true);
-            descriptionText.textContent = 'Ready for AI description';
             copyBtn.style.display = 'none';
-            descriptionLoading.style.display = 'none';
+            var pl = document.getElementById('panelLoading'); if (pl) pl.style.display = 'none';
+            if (promptOutput) promptOutput.value = '';
+            if (promptOutput) promptOutput.value = '';
         });
 
         ['dragenter','dragover','dragleave','drop'].forEach(function(evt){
@@ -280,9 +292,10 @@
         });
 
         copyBtn.addEventListener('click', function(){
-            var text = descriptionText.textContent || '';
+            var text = promptOutput && promptOutput.value || '';
             if (!text) return;
             if (navigator.clipboard) navigator.clipboard.writeText(text);
+            if (promptOutput) promptOutput.value = text;
         });
 
         generateBtn.addEventListener('click', function(){
@@ -290,16 +303,15 @@
                 imageInput.click();
                 return;
             }
-            descriptionText.textContent = 'Processing description...';
-            descriptionLoading.style.display = 'flex';
+            var pl2 = document.getElementById('panelLoading'); if (pl2) pl2.style.display = 'flex';
             (async function(){
                 var style = promptStyleSelect ? promptStyleSelect.value : 'Brief';
                 var fileId = await uploadToServer(selectedFile);
                 console.log('[Describer] upload done', { file_id: fileId });
                 var serverDesc = await describeViaWorkflowByFileId(fileId, style);
-                if (serverDesc) { descriptionText.textContent = serverDesc; }
-                else { var el = originalImagePreview; descriptionText.textContent = analyze(el); }
-                descriptionLoading.style.display = 'none';
+                var finalText = serverDesc ? serverDesc : analyze(originalImagePreview);
+                if (promptOutput) promptOutput.value = finalText;
+                if (pl2) pl2.style.display = 'none';
                 copyBtn.style.display = 'inline-flex';
             })();
         });
@@ -312,12 +324,19 @@
             if (originalImageUrl) URL.revokeObjectURL(originalImageUrl);
             originalImageUrl = null;
             if (originalImagePreview) originalImagePreview.src = '';
-            descriptionText.textContent = 'Ready for AI description';
-            descriptionLoading.style.display = 'none';
+            var pl3 = document.getElementById('panelLoading'); if (pl3) pl3.style.display = 'none';
             copyBtn.style.display = 'none';
+            if (promptOutput) promptOutput.value = '';
             showResults(false);
             setTimeout(function(){ imageInput.click(); }, 0);
         });
+
+        if (clearBtn) {
+            clearBtn.addEventListener('click', function(){
+                if (promptOutput) promptOutput.value = '';
+                copyBtn.style.display = 'none';
+            });
+        }
 
         function showResults(show){
             resultsSection.style.display = show ? 'block' : 'none';
