--- a/blank-image.html
+++ b/blank-image.html
@@ -307,11 +307,7 @@
     </div>
   </section>
 
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 CusImage. Making image editing smarter.</p>
-    </div>
-  </footer>
+  <cus-footer></cus-footer>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -588,5 +584,6 @@
       render();
     });
   </script>
+  <script src="/footer.js" defer></script>
 </body>
 </html>
