--- a/images-for-fb-cover.html
+++ b/images-for-fb-cover.html
@@ -58,11 +58,7 @@
     </div>
   </main>
 
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 CusImage. Images for FB Cover gallery powered by Feishu Bitable.</p>
-    </div>
-  </footer>
+  <cus-footer></cus-footer>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       var toggle = document.querySelector('.nav-toggle');
@@ -82,5 +78,6 @@
     });
   </script>
   <script src="fb-covers.js"></script>
+  <script src="/footer.js" defer></script>
 </body>
 </html>
