--- a/400x400-black-image.html
+++ b/400x400-black-image.html
@@ -63,11 +63,7 @@
     </div>
   </main>
 
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 CusImage. Making image editing smarter.</p>
-    </div>
-  </footer>
+  <cus-footer></cus-footer>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -138,5 +134,6 @@
       }
     });
   </script>
+  <script src="/footer.js" defer></script>
 </body>
 </html>
