chore: update HTML/CSS pages and styles

--- a/black-400.html
+++ b/black-400.html
@@ -60,11 +60,7 @@
     </div>
   </main>
 
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 CusImage. Making image editing smarter.</p>
-    </div>
-  </footer>
+  <cus-footer></cus-footer>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -104,5 +100,6 @@
       }
     });
   </script>
+  <script src="/footer.js" defer></script>
 </body>
 </html>
