--- a/layout-demo.html
+++ b/layout-demo.html
@@ -188,37 +188,8 @@
         </main>
 
         <!-- 页脚 -->
-        <footer class="footer">
-            <div class="container">
-                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: var(--space-8); margin-bottom: var(--space-8);">
-                    <div>
-                        <h4 style="font-size: 1.125rem; font-weight: 600; color: var(--gray-900); margin-bottom: var(--space-4);">Layout System</h4>
-                        <p style="color: var(--gray-600); line-height: 1.6;">Modern, responsive layout components for building beautiful web applications.</p>
-                    </div>
-                    <div>
-                        <h4 style="font-size: 1.125rem; font-weight: 600; color: var(--gray-900); margin-bottom: var(--space-4);">Features</h4>
-                        <ul style="list-style: none; padding: 0; color: var(--gray-600);">
-                            <li style="margin-bottom: var(--space-2);">✓ Grid Layout</li>
-                            <li style="margin-bottom: var(--space-2);">✓ Flexbox Layout</li>
-                            <li style="margin-bottom: var(--space-2);">✓ Responsive Design</li>
-                            <li>✓ Modern Components</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h4 style="font-size: 1.125rem; font-weight: 600; color: var(--gray-900); margin-bottom: var(--space-4);">Resources</h4>
-                        <ul style="list-style: none; padding: 0; color: var(--gray-600);">
-                            <li style="margin-bottom: var(--space-2);"><a href="#" style="color: inherit; text-decoration: none;">Documentation</a></li>
-                            <li style="margin-bottom: var(--space-2);"><a href="#" style="color: inherit; text-decoration: none;">Examples</a></li>
-                            <li style="margin-bottom: var(--space-2);"><a href="#" style="color: inherit; text-decoration: none;">GitHub</a></li>
-                            <li><a href="#" style="color: inherit; text-decoration: none;">Support</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div style="text-align: center; padding-top: var(--space-8); border-top: 1px solid var(--gray-200);">
-                    <p style="color: var(--gray-500); font-size: 0.875rem;">&copy; 2025 CusImage. Modern layout system for web applications.</p>
-                </div>
-            </div>
-        </footer>
+        <cus-footer></cus-footer>
     </div>
+    <script src="/footer.js" defer></script>
 </body>
 </html>
